# nrw-events

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: check_env_docs.py  nrw-events.py  nrw-events.sh  test.sh
scripts/nrw_events/: category_taxonomy.py  common.py  config.py  core.py  dates.py  event_builder.py  health.py  http.py  ical.py  jsonld.py  location.py  models.py  observability.py  quality.py  report.py  runner.py  runtime.py  scoring.py  source_specs.py  source_types.py  text.py  validation.py
tests/: __init__.py  helpers.py  test_bonn_detail_cache.py  test_bonn_districts.py  test_bonn_food_sources.py  test_bonn_market_sources.py  test_bonn_press_festivals.py  test_bonn_theater_sources.py  test_bonnjetzt.py  test_brueckenforum_markets.py  test_category_taxonomy.py  test_data_integrity.py  test_detail_page_cache.py  test_free_admission.py  test_hardening_regressions.py  test_http_headers.py  test_jsonld_schedule.py  test_junk_filter.py  test_koenigswinter.py  test_lampert.py  test_lohmar.py  test_market_gap_sources.py  test_market_sources.py  test_meckenheim.py  test_module_boundaries.py  test_much.py  test_nightlife_sources.py  test_radiobonn.py  test_regional_common.py  test_regional_description_quality.py  test_remaining_description_fallbacks.py  test_report.py  test_runner_output.py  test_runtime_config.py  test_siegburg.py  test_source_parsers.py  test_uni_bonn.py
tests/sources/: __init__.py  parser_cases.py  test_bonn_sources.py  test_cinema_specials.py  test_pipeline_contracts.py  (+1 more)
(+58 files in other folders)
