[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nrw-events"
version = "0.1.0"
description = "Stdlib-only NRW event importer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
nrw-events = "nrw_events.runner:main"

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["nrw_events*"]

[dependency-groups]
dev = ["ruff"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E9", "F"]
